--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
 pydantic-settings = "^2.5.2"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
+asyncpg = "^0.29.0"
 
 
 [tool.poetry.group.dev.dependencies]
