--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["standard"], version = "^0.115.0"}
 pydantic-settings = "^2.5.2"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
 asyncpg = "^0.29.0"
+alembic = "^1.13.3"
 
 
 [tool.poetry.group.dev.dependencies]
