--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ flake8 = "^7.1.1"
 mypy = "^1.11.2"
 black = "^24.8.0"
 isort = "^5.13.2"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
+pyhamcrest = "^2.1.0"
 
 [tool.black]
 line-length = 90
