--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.3"
 orjson = "^3.10.7"
+pytest-asyncio = "^0.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -24,6 +25,7 @@ isort = "^5.13.2"
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
 pyhamcrest = "^2.1.0"
+pytest-postgresql = "^6.1.1"
 
 [tool.black]
 line-length = 90
