--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ target-version = ['py310']
 multi_line_output = 3
 skip_gitignore = true
 
+[tool.pytest.ini_options]
+pythonpath=[
+    ".", "src",
+]
+asyncio_mode="auto"
+
 
 [build-system]
 requires = ["poetry-core"]
