--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ services:
     networks:
       - backend
 
+  test_db:
+    image: postgres
+    restart: always
+    env_file:
+      - test_db.env
+    ports:
+      - "6000:5432"
+    volumes:
+      - test_postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
+
   warehouse-api:
     build:
       dockerfile: Dockerfile
@@ -30,6 +42,7 @@ services:
 
 volumes:
   postgres_data:
+  test_postgres_data:
 
 networks:
   backend:
